--- a/public/styles/views/main.css
+++ b/public/styles/views/main.css
@@ -1,6 +1,6 @@
 .main-wrapper {
   display: flex;
-  background: url("../img/background.jpg") no-repeat center;
+  background: url("../img/bg.jpg") no-repeat center;
   background-size: cover;
   height: 100vh;
   width: 100%;
